# describer

./: .gitignore  LICENSE  README.md  codebase-overview.md  pyproject.toml  summary.md
describer/: __init__.py  cli.py  core.py
examples/: virtual-webhook-usecases-analysis.md
tests/: __init__.py  test_describer.py  test_output_file.py
